[package]
name = "forest_vm_migration"
description = "StateTree and Actors migrations between different hardforks."
license = "MIT OR Apache-2.0"
version = "0.3.1"
authors = ["ChainSafe Systems <info@chainsafe.io>"]
edition = "2018"
repository = "https://github.com/ChainSafe/forest"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actor = { package = "actor_interface", path = "../actor_interface" }
fil_types = "0.1"
vm = { package = "forest_vm", version = "0.3.1" }
ipld_blockstore = "0.1"
address = { package = "forest_address", version = "0.3" }
serde = { version = "1.0", features = ["derive"] }
cid = { package = "forest_cid", version = "0.3", features = ["json"] }
clock = { package = "fil_clock", version = "0.1" }
encoding = { package = "forest_encoding", version = "0.2.1" }
num-bigint = { version = "0.1.1", package = "forest_bigint", features = ["json"] }
forest_hash_utils = "0.1"
forest_json_utils = "0.1.1"
state_tree = { path = "../state_tree" }
async-std = "1.9"
futures = "0.3.5"
